--- a/codebusters/public/manifest.json
+++ b/codebusters/public/manifest.json
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "concordia.png",
+      "src": "BikeEmoji.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "concordia.png",
+      "src": "BikeEmoji.png",
       "type": "image/png",
       "sizes": "512x512"
     }
